# monero

ots/: CMakeLists.txt  Doxyfile.in
ots/cmake/: monero-ots-config.cmake.in
ots/include/: key-store.hpp  keyjar.hpp  ots-exceptions.hpp  ots-internal.hpp  ots.h  ots.hpp  seed-monero-internal.hpp  version.h
ots/manual/: index.md
ots/src/: address.cpp  keyjar.cpp  ots-abi.cpp  ots.cpp  ots_abi.cpp  seed-language.cpp  seed-legacy.cpp  seed-monero.cpp  seed-polyseed.cpp  seed.cpp  version.h.in  wallet.cpp
ots/tests/: CMakeLists.txt  check_ots.c  gtest_ots.cpp
src/: version.cpp.in
src/wallet/: wallet2.cpp  wallet2.h
src/wallet/api/: pending_transaction.cpp  pending_transaction.h  wallet.cpp  wallet.h  wallet2_api.h
